--- a/css/index.css
+++ b/css/index.css
@@ -263,3 +263,52 @@ a,a:hover{color:#333;}
 .cancelBtn:hover{
 	background-position: 0 -19px;
 }
+/* 轮播图片 */
+.m-slide{position:relative;height:460px;overflow:hidden;width:100%;
+}
+.m-slide li{
+	position: absolute;
+	left: 50%;
+	width: 100%;
+	min-width: 1650px;
+}
+.m-slide img{
+	width: 100%;	
+	min-height: 460px;
+	margin-left: -50%;
+}
+/* 轮播控制按钮 */
+.contBtn{
+	position: absolute;
+	bottom: 20px;
+	width: 100%;
+	height: 10px;
+	text-align: center;
+	z-index: 100px;
+}
+.contBtn span{
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	margin-left: 11px;
+	border-radius: 5px;
+	background-color: #fff;
+	cursor: pointer;
+}
+.hide{display:none;
+}
+.active{
+	display: block;
+}
+.contBtnCol{
+	display: inline-block;
+	width: 11px;
+	height: 11px;
+	border-radius: 5px;
+	background-color: #000;
+	cursor: pointer;
+}
+
+
+
+
