--- a/css/index.css
+++ b/css/index.css
@@ -401,7 +401,6 @@ body{background:#fff;margin: 0;}
 }
 .mainProductCont{
 	width: 1206px;
-	height: 2000px;
 	margin:0 auto;
 }
 .m-leftList{
@@ -426,6 +425,7 @@ body{background:#fff;margin: 0;}
 }
 .u-Topbar{
 	height: 69px;
+	margin-left: -39px;
 }
 .u-Topbar .u-active-f1{
 	background:#39a030;
@@ -463,11 +463,16 @@ body{background:#fff;margin: 0;}
 }
 /* 视频播放器 */
 .m-player{
-	position: relative;
+	display: none;
+	width: 1000px;
+	height: 1000px;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+
 }
 .u-bg{
 	background: rgb(0,0,0);
-	opacity: 0.7;
 	filter:alpha(opacity=70); 
 	width: 100%;
 	height: 100%;
@@ -477,13 +482,45 @@ body{background:#fff;margin: 0;}
 	left: 0;
 	right: 0;
 	z-index: 99;
-	display: none;
-	/* display: none; */
-} 
-.m-playerBox{z-index:999;
+	opacity: 0.7;
+}
+.m-playerBox{
+	width: 1000px;
+	height: 650px;
+	background: #fff;
+	z-index:999;
+	position:absolute;
+	left: 50%;
+	margin-left: -320px;
+
 }
 .playerVideo{
+	margin-left: -475px;
+	left: 50%;
+	margin-top: 10px;
+	position: absolute;
 	width: 950px;
-	height: 675px;
-	
+
+}
+.m-playerBox h3{
+	font-size: 20px;
+	width: 300px;
+	padding-top: 10px;
+	margin-left: 30px;
+}
+/*课程列表*/
+.u-courList{
+	width: 960px;
+	height: 1240px;
+	background: red;
+	float: left;
+}
+.courseShow{
+	width: 225px;
+	height: 228px;
+	margin-top: 20px;
+	margin-right: 20px;
+	background: blue;
+	box-shadow: 0 1px 0px 1px #f1f1f1;
+	cursor: pointer;
 }
